# taco-mcp

./: .gitignore  LICENSE  README.md  README_EN.md  pyproject.toml
data/: aliases.yaml
data/processed/: taco.sqlite
scripts/: build_db.py  download_taco.py
src/taco_mcp/: __init__.py  db.py  normalize.py  schemas.py  server.py
tests/: test_db.py  test_normalize.py
