[project]
name = "taco-mcp"
version = "0.1.0"
description = "MCP server for Brazilian TACO nutritional database"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
taco-mcp = "taco_mcp.server:main"
taco-mcp-server = "taco_mcp.server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/taco_mcp"]

[tool.hatch.build.targets.wheel.force-include]
"data/processed/taco.sqlite" = "taco_mcp/data/taco.sqlite"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
